# environment-overseer

./: .dockerignore  .gitignore  README.md  daemon  disable  docker-compose.yml  enable  makefile  overseer  overseer.py  record  setup.cfg  setup.py  timer
.circleci/: config.yml
active/: test  youtube
aur/: PKGBUILD
examples/activities/: activity.json  ads.json  discord.json  facebook.json  freenet.json  gaming.json  netflix.json  reddit.json  rimworld.json  youtube.json
examples/scripts/checks/: gaming
examples/scripts/disable/: ads  deauth  discord  facebook  freenet  gaming  netflix  reddit  rimworld  youtube
examples/scripts/enable/: ads  (+6 more)
executable_examples/disable/: ads  netflix  reddit  youtube
executable_examples/enable/: ads  discord  facebook  netflix
executable_examples/trackers/: history_tracker
executable_examples/triggers/: pihelper  youtube
overseer/: config.py  filesystem.py  main.py  resetter.py  utils.py
overseer/modules/: auto_trigger.py  forbid.py  forced_activity.py  global_forbid.py  interrupt.py  limit.py  manager.py  pre_check.py  recharge.py  supermodule.py
scripts/disable/: ap  test  youtube
scripts/enable/: ap  test  youtube
src/: overseer  overseer-rest-api.py  overseer-test.py  overseer.py
src/overseer/: filesystem.py  main.py  resetter.py
systemd/: overseer-api.service  overseer-guardian.service  overseer-reset.service  overseer-reset.timer  overseer.service
test/: Dockerfile  overseer-test.py  routine.sh
test/activities/: inter.json
tests/: Dockerfile  routine.py  routine.sh
today/: test  youtube
(+26 files in other folders)
