[metadata]
name = overseer-meowxiik
version = 1.1.0
author = meowxiik
author_email = meowxiik@gmail.com
description = An app to control your behavior
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/richard-hajek/environment-overseer
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    jcompose = just_compose:main.entrypoint
